--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - PORT=4001
       - REDIS_HOST=storage
       - REDIS_PORT=6379
+      - LB_PUBLIC_KEY=026c4d6327da5ab125f028a4945740e1a6093aee4e6a83a2c774c9d0755afce21c
     depends_on:
       - storage
   cart-2:
@@ -18,6 +19,7 @@ services:
       - PORT=4002
       - REDIS_HOST=storage
       - REDIS_PORT=6379
+      - LB_PUBLIC_KEY=026c4d6327da5ab125f028a4945740e1a6093aee4e6a83a2c774c9d0755afce21c
     depends_on:
       - storage
   cart-3:
@@ -28,6 +30,7 @@ services:
       - PORT=4003
       - REDIS_HOST=storage
       - REDIS_PORT=6379
+      - LB_PUBLIC_KEY=026c4d6327da5ab125f028a4945740e1a6093aee4e6a83a2c774c9d0755afce21c
     depends_on:
       - storage
   load-balancer:
@@ -37,6 +40,7 @@ services:
     environment:
       - PORT=3000
       - SERVICES=cart-1:4001:15,cart-2:4002:10,cart-3:4003:5
+      - PRIVATE_KEY=ce2ed70e152d1b0429af2db42ac2bb440b65bc7c01bf99862a02ab766352a548
   storage:
     image: redis:6.2-alpine
     restart: always
