--- a/cart/package.json
+++ b/cart/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/djzivkovic/cartify-load-balancer#readme",
   "dependencies": {
+    "@noble/curves": "^1.1.0",
     "express": "^4.18.2",
     "redis": "^4.6.7"
   },
