--- a/cart/package.json
+++ b/cart/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@noble/curves": "^1.1.0",
     "express": "^4.18.2",
-    "redis": "^4.6.7"
+    "ioredis": "^5.3.2",
+    "redlock": "^5.0.0-beta.2"
   },
   "type": "module",
   "devDependencies": {
